# renderer

./: .gitignore  .gitmodules  .tasks  CMakeLists.txt  README.md  init.bat  init.sh
asserts/african_head/: african_head_eye_inner_spec.tga.REMOVED.git-id
asserts/boggie/: body.obj.REMOVED.git-id  body_diffuse.tga.REMOVED.git-id  body_nm_tangent.tga.REMOVED.git-id  body_spec.tga.REMOVED.git-id  eyes.obj.REMOVED.git-id  eyes_diffuse.tga.REMOVED.git-id  eyes_spec.tga.REMOVED.git-id  head.obj.REMOVED.git-id  head_diffuse.tga.REMOVED.git-id  head_nm_tangent.tga.REMOVED.git-id  head_spec.tga.REMOVED.git-id
asserts/cube/: cube_diffuse.png.REMOVED.git-id  cube_spec.png.REMOVED.git-id
asserts/diablo3/: diablo3_pose_diffuse.tga.REMOVED.git-id  diablo3_pose_nm.tga.REMOVED.git-id  diablo3_pose_nm_tangent.tga.REMOVED.git-id
asserts/diablo3_pose/: diablo3_pose.obj.REMOVED.git-id  diablo3_pose_glow.tga.REMOVED.git-id  diablo3_pose_spec.tga.REMOVED.git-id
src/: CMakeLists.txt  cache.h  camera.cc  camera.h  color.cc  color.h  data2d.h  draw.cc  draw.h  draw2d.cc  draw2d.h  draw3d.h  draw_helper.h  frame_buffer.cc  frame_buffer.h  image.h  key.cc  key.h  light.h  main.cc  main.cc.REMOVED.git-id  main.cpp  main1.cc  math.h  matrix.h  model.cc  model.h  object.cc  object.h  point.h  polygon.cc  polygon.h  quaternion.h  scene.cc  scene.h  tgaimage.cc  tgaimage.h  transform.h  trapezoid.h  vector.h  (+8 more)
src/lib/: CMakeLists.txt  color.cc  color.h  data2d.h  draw.cc  draw.h  frame_buffer.cc  frame_buffer.h  image.cc  key.cc  key.h  light.h  material.h  math.h  matrix.h  model.cc  model.h  objdata.cc  objdata.h  object.h  polygon.cc  polygon.h  quaternion.h  render_style.h  scene.cc  scene.h  transform.h  trapezoid.cc  trapezoid.h  vector.h  vertex.h  window.cc  window.h
tests/: CMakeLists.txt  add_test.cc  draw_helper_test.cc  draw_test.cc  matrix_test.cc  test.h  trapezoid_test.cc  vector_test.cc
